--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,25 +1,41 @@
-spring.datasource.url=jdbc:mysql://localhost:3336/APP_SECURITY?createDatabaseIfNotExist=True
-spring.datasource.username=root
-spring.datasource.password=
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+#spring.datasource.url=jdbc:mysql://localhost:3336/APP_SECURITY?createDatabaseIfNotExist=True
+#spring.datasource.username=root
+#spring.datasource.password=
+#spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 #JPA
-spring.jpa.database=MYSQL
-spring.jpa.hibernate.ddl-auto=update
-spring.jpa.show-sql=true
+#spring.jpa.database=MYSQL
+#spring.jpa.hibernate.ddl-auto=update
+#spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 
 apitemalivre.jwt.secret=`xb;/|HK7!ytpq"M~C~d<m98Pe?)!;lGi#}BxNx8Q?!$7zXSExUMcH<IttI|(QW
 apitemalivre.jwt.expiraton=6000000
 apitemalivre.jwt.issuer=fbo-sec-learn
 
-spring.flyway.url=jdbc:mysql://localhost:3336/
-spring.flyway.enabled=true
-spring.flyway.schemas=APP_SECURITY
-spring.flyway.user=root
-spring.flyway.password=
-spring.flyway.locations=classpath:db/migration
+#spring.flyway.url=jdbc:mysql://localhost:3336/
+#spring.flyway.enabled=true
+#spring.flyway.schemas=APP_SECURITY
+#spring.flyway.user=root
+#spring.flyway.password=
+#spring.flyway.locations=classpath:db/migration
 #spring.jpa.hibernate.ddl-auto=update
 
 
+spring.h2.console.enabled=true
+spring.h2.console.path=/h2-console
 
+spring.datasource.url=jdbc:h2:mem:app_security
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.username=sa
+spring.datasource.password=
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+spring.jpa.show-sql=true
+
+spring.flyway.url=jdbc:h2:mem:app_security
+spring.flyway.enabled=true
+#spring.flyway.schemas=app_security
+spring.flyway.user=sa
+spring.flyway.password=
+spring.flyway.locations=classpath:db/migration
+spring.jpa.hibernate.ddl-auto=none
